--- a/india.html
+++ b/india.html
@@ -3,12 +3,13 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>India</title>
 	<link rel="stylesheet" href='style.css'>
 	<link rel="stylesheet" type="text/css" href="responsive.css">
 
-	<!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="Links/bootstrap.min.css">
+	 <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 
     <!-- Fontawesome CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
