--- a/index.html
+++ b/index.html
@@ -4,7 +4,29 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Corona Virus Tracker</title>
+	<meta name="author" content="Inovatik">
+
+	<title>COVID-19 Tracker: India and world Records.</title>
+
+	<meta title="Corona Virus tracker fro world and india.">
+	<meta name="description" content="Total case of World and India along with the number of recovered and deaths.">
+	<meta name="author" content="coronavirus covid-19">
+	<meta name="keywords" content="Coronavirus,Covid-19,coronavirus,covid-19,World tracker,India tracker">
+
+	<meta name="copyright" content="Ashish gupta">
+    <meta name="robots" content="index,follow">
+    <meta name="revisit-after" content="10 days">
+    <!-- <meta name="Reply-to" content="@gmail.com"> -->
+    <meta name="document-classification" content="Internet">
+    <meta name="document-type" content="Public">
+    <meta name="document-rating" content="Safe for Kids">
+    <meta name="document-distribution" content="Global">
+
+    <meta property="og:type" content="website" />
+
+
+
+
 	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" type="text/css" href="responsive.css">
 
@@ -111,9 +133,9 @@
  	 	<div class="col-lg-6 col-md-6 col-sm-6 col-12">
  	 		<div class="info">
  	 			<h3 class="title">About the Disease</h3>
- 	 			<h2 class="subtitle">Coronavirus (covid-19)</h2>
+ 	 			<h1 class="subtitle">Coronavirus (covid-19)</h1>
 
- 	 			<p class="para">Covid -19 is a new illness that can affect your lungs and airways.
+ 	 			<p class="para">Covid-19 is a new illness that can affect your lungs and airways.
  	 			It is also called as Coronovirus. It was discoverd in December 2019 in Wuhan,China.</p>
  	 			<p class="para">The Coronavirus is spread mainly from person to person.
   	  					This can only happen with person who are in close contact with each other.</p>
@@ -141,7 +163,7 @@
   <div class="spread" id="spread">
   	  <div class="info">
   	  	 <h3 class="title">How Corona virus is spread</h3>
-  	  	 <h4 class="subtitle">Transmission of covid-19</h4>
+  	  	 <h1 class="subtitle">Transmission of covid-19</h1>
   	  	 <p class="para">The Coronavirus is spread mainly from person to person.
   	  	 This can only happen with person who are in close contact with each other.Regularly or throughly clean your hand with an alcohol based sanitizer.</p>
   	  </div>
@@ -194,7 +216,7 @@
    <div  id="symptoms" class="symptoms">
    	    <div class="info">
 	  	  	 <h3 class="title">What ar the Symptoms of Covid-19 ?</h3>
-	  	  	 <h4 class="subtitle">Symptoms of coronavirus</h4>
+	  	  	 <h1 class="subtitle">Symptoms of coronavirus</h1>
 	  	  	 <p class="para">The Coronavirus is spread mainly from person to person.
   	  	 This can only happen with person who are in close contact with each other.Regularly or throughly clean your hand with an alcohol based sanitizer.</p>
   	    </div>
@@ -237,7 +259,7 @@
    <div class="hand">
    	    <div class="info">
  	 			<h3 class="title">Wash your hands frequently</h3>
- 	 			<h2 class="subtitle">Protect yourself, wash your hand</h2>
+ 	 			<h1 class="subtitle">Protect yourself, wash your hand</h1>
  	 			<p class="para">Regularly or throughly clean your hand with an alcohol based sanitizer 
  	 			or wash them with soap as it kill the virus that may be on your hand.</p>
  	 	</div>
@@ -259,7 +281,7 @@
   			<div class="col-lg-6 col-md-6 col-sm-6 col-12">
   				<div class="info">
 	 	 			<h3 class="title">How to Protect Yourself ? </h3>
-	 	 			<h2 class="subtitle">Prevention and Advice</h2>
+	 	 			<h1 class="subtitle">Prevention and Advice</h1>
 	 	 			<p class="para">There is currently no vaccine to prevent Coronvirus(Covid-19).
 	 	 			The best way to prevent illness is to avoid being exposed to the virus.</p>
  	 	       </div>
@@ -306,7 +328,7 @@
   <div id="protect" class="protect">
   	 <div class="info text-center">
   	  	 <h3 class="title">Do's & Don't</h3>
-  	  	 <h4 class="subtitle">Protect Yourself</h4>
+  	  	 <h1 class="subtitle">Protect Yourself</h1>
   	  	 <p class="para mx-auto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet, eum. Eos adipisci perspiciatis excepturi tenetur dolores commodi, ullam minima reiciendis.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat, magni.</p>
   	  </div>
 
