--- a/india.html
+++ b/india.html
@@ -4,9 +4,26 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>India</title>
+	<title>Covid-19 India tracker</title>
+
+	<meta title="India Covid-19 or coronavirus tracker.">
+	<meta name="description" content="Total cases of India along with the number of recovered and deaths.">
+	<meta name="author" content="Ashish Gupta">
+	<meta name="keywords" content="Coronavirus india,Covid-19 india ,coronavirus,covid-19,World tracker,Total India tracker,india total cases">
+
+	<meta name="copyright" content="Ashish gupta">
+    <meta name="robots" content="index,follow">
+    <meta name="revisit-after" content="10 days">
+    <!-- <meta name="Reply-to" content="@gmail.com"> -->
+    <meta name="document-classification" content="Internet">
+    <meta name="document-type" content="Public">
+    <meta name="document-rating" content="Safe for Kids">
+    <meta name="document-distribution" content="Global">
+    <meta property="og:type" content="website" />
+    
 	<link rel="stylesheet" href='style.css'>
 	<link rel="stylesheet" type="text/css" href="responsive.css">
+
 
 	 <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
