--- a/world.html
+++ b/world.html
@@ -11,7 +11,7 @@
 	<meta title="World Covid-19 tracker or coronavirus tracker.">
 	<meta name="description" content="Total cases of world along with the number of recovered and deaths.">
 	<meta name="author" content="Ashish Gupta">
-	<meta name="keywords" content="World Coronavirus,world Covid-19,coronavirus,covid-19,World tracker,India tracker,india total cases,Total world cases">
+	<meta name="keywords" content="World Coronavirus,world Covid-19,coronavirus,covid-19,World tracker,India tracker,india total cases,Total world cases,COVID-19 tracker,CovidTracker,Coronavirus,Covid19 World tracker,Covid19 India tracker, world coronavirus status,world coid19 status,india covid19 status,india coronavirus status,Coronavirus Tracker,coronavirus,COVID-19,COVID,United States,covid19india,corona, india,World,virus, pandemic, disease"/>
 
 	<meta name="copyright" content="Ashish gupta">
     <meta name="robots" content="index,follow">
