--- a/index.html
+++ b/index.html
@@ -4,19 +4,18 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="author" content="Inovatik">
+	<meta name="author" content="Ashish gupta">
 
 	<title>COVID-19 Tracker: India and world Records.</title>
 
 	<meta title="Corona Virus tracker fro world and india.">
-	<meta name="description" content="Total case of World and India along with the number of recovered and deaths.">
-	<meta name="author" content="coronavirus covid-19">
-	<meta name="keywords" content="Coronavirus,Covid-19,coronavirus,covid-19,World tracker,India tracker">
+	<meta name="description" content="Live statistics and coronavirus news tracking the number of confirmed cases, recovered patients, tests, and death due to the COVID-19 coronavirus.Track COVID-19 local and global coronavirus cases.">
+	
+    <meta name="keywords" content="COVID-19 tracker,CovidTracker,Coronavirus,Covid-19,coronavirus,covid-19,Coovid19 World tracker,Covid19 India tracker, world coronavirus status,world coid19 status,india covid19 status,india coronavirus status,Coronavirus Tracker,Covid-19 Map,Covid map,Coronavirus map,coronavirus,COVID-19,COVID,United States,covid19india,corona, india,World,virus, pandemic, disease"/>
 
 	<meta name="copyright" content="Ashish gupta">
     <meta name="robots" content="index,follow">
     <meta name="revisit-after" content="10 days">
-    <!-- <meta name="Reply-to" content="@gmail.com"> -->
     <meta name="document-classification" content="Internet">
     <meta name="document-type" content="Public">
     <meta name="document-rating" content="Safe for Kids">
