--- a/india.html
+++ b/india.html
@@ -4,17 +4,16 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Covid-19 India tracker</title>
+	<title>Covid19 India tracker</title>
 
 	<meta title="India Covid-19 or coronavirus tracker.">
-	<meta name="description" content="Total cases of India along with the number of recovered and deaths.">
+	<meta name="description" content="Track Total cases of India along with the number of recovered and deaths.">
 	<meta name="author" content="Ashish Gupta">
-	<meta name="keywords" content="Coronavirus india,Covid-19 india ,coronavirus,covid-19,World tracker,Total India tracker,india total cases">
+	<meta name="keywords" content="COVID-19 tracker,CovidTracker,Coronavirus,Covid-19,coronavirus,covid-19,Coovid19 World tracker,Covid19 India tracker, world coronavirus status,world coid19 status,india covid19 status,india coronavirus status,Coronavirus Tracker,Covid,coronavirus,COVID-19,COVID,United States,covid19india,corona, india,World,virus, pandemic, disease"/>
 
 	<meta name="copyright" content="Ashish gupta">
     <meta name="robots" content="index,follow">
     <meta name="revisit-after" content="10 days">
-    <!-- <meta name="Reply-to" content="@gmail.com"> -->
     <meta name="document-classification" content="Internet">
     <meta name="document-type" content="Public">
     <meta name="document-rating" content="Safe for Kids">
